--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
+    "react-joyride": "^2.7.2",
     "react-router-dom": "^6.22.3",
     "zustand": "^4.5.2"
   },
@@ -24,6 +25,7 @@
     "@eslint/js": "^9.9.1",
     "@types/react": "^18.3.5",
     "@types/react-dom": "^18.3.0",
+    "@types/react-joyride": "^2.0.8",
     "@types/telegram-web-app": "^6.9.3",
     "@vitejs/plugin-react": "^4.3.1",
     "autoprefixer": "^10.4.18",
