--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "npx vite",
     "build": "npx vite build",
     "lint": "npx eslint .",
-    "preview": "npx vite preview"
+    "preview": "npx vite preview",
+    "sync-db": "node scripts/sync-database.js",
+    "check-env": "node -e \"console.log('Environment check:', process.env.VITE_SUPABASE_URL ? '✅ URL set' : '❌ URL missing', process.env.VITE_SUPABASE_ANON_KEY ? '✅ Key set' : '❌ Key missing')\""
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.39.8",
@@ -19,7 +21,8 @@
     "react-icons": "^5.0.1",
     "react-joyride": "^2.7.2",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2"
+    "zustand": "^4.5.2",
+    "dotenv": "^16.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
