--- a/package.json
+++ b/package.json
@@ -14,15 +14,16 @@
   "dependencies": {
     "@supabase/supabase-js": "^2.39.8",
     "@tonconnect/ui-react": "^2.0.0",
+    "dotenv": "^16.3.1",
     "lucide-react": "^0.344.0",
     "react": "^18.3.1",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-joyride": "^2.7.2",
     "react-router-dom": "^6.22.3",
-    "zustand": "^4.5.2",
-    "dotenv": "^16.3.1"
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.1",
